--- a/requirements.txt
+++ b/requirements.txt
@@ -48,12 +48,6 @@ jieba3k==0.35.1
 Jinja2==2.10.1
 joblib==0.14.0
 jsonschema==3.1.1
-jupyter==1.0.0
-jupyter-client==5.3.4
-jupyter-console==6.0.0
-jupyter-core==4.6.0
-Keras-Applications==1.0.7
-Keras-Preprocessing==1.0.9
 kiwisolver==1.1.0
 lxml==4.3.3
 Markdown==3.1
@@ -69,23 +63,19 @@ networkx==2.4
 newspaper3k==0.2.8
 notebook==6.0.1
 npm==0.1.1
-numpy==1.16.2
 oauthlib==3.1.0
 optional-django==0.1.0
-pandas==0.24.2
-pandas-profiling==1.4.2
-pandocfilters==1.4.2
 parso==0.5.1
 patsy==0.5.1
 pexpect==4.7.0
 pickleshare==0.7.5
 plac==1.1.3
-plotly==4.3.0
 post==2019.4.13
 preshed==3.0.2
 prometheus-client==0.7.1
 prompt-toolkit==2.0.10
 protobuf==3.7.1
+psycopg2
 ptyprocess==0.6.0
 public==2019.4.13
 pycparser==2.19
@@ -94,6 +84,7 @@ pyparsing==2.4.0
 pyrsistent==0.15.4
 PySocks==1.7.1
 python-dateutil==2.8.0
+python-dotenv
 pytz==2019.1
 PyYAML==5.1
 pyzmq==18.1.0
